@@ -7,6 +7,7 @@
 Version 0.8
 Date: xx/xx/200x
 
++Add run last executed program function and shortcut
 +Fix file list not being populated on first opening
 
 #-----------------------------------------------------------------------------#
